[package]
name = "speedtest"
version = "0.1.0"
authors = ["fujiw <fujiw10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
influxdb = { version = "0.2.0", features = ["derive"] }
serde = "1.0.117"
serde_json = "1.0.59"
tokio = { version = "0.2.2", features = ["full"] }
